@@ -44,7 +44,7 @@ sep         = cfg_entry;
 sep.tag     = 'sep';
 sep.name    = 'Separation';
 sep.help    = {'The separation (in mm) between the points sampled in the reference image.  Smaller sampling distances gives more accurate results, but will be slower.'};
-sep.strtype = 'e';
+sep.strtype = 'r';
 sep.num     = [1 1];
 sep.def     = @(val)spm_get_defaults('realign.estimate.sep', val{:});
 % ---------------------------------------------------------------------
@@ -60,7 +60,7 @@ fwhm.help    = {
                 ''
                 '    * MRI images typically use a 5 mm kernel.'
 }';
-fwhm.strtype = 'e';
+fwhm.strtype = 'r';
 fwhm.num     = [1 1];
 fwhm.def     = @(val)spm_get_defaults('realign.estimate.fwhm', val{:});
 % ---------------------------------------------------------------------
