@@ -44,7 +44,7 @@ thresh         = cfg_entry;
 thresh.tag     = 'thresh';
 thresh.name    = 'Threshold';
 thresh.help    = {''};
-thresh.strtype = 'e';
+thresh.strtype = 'r';
 thresh.num     = [1 1];
 thresh.val     = {0.05};
 
@@ -52,7 +52,7 @@ thresh2         = cfg_entry;
 thresh2.tag     = 'thresh';
 thresh2.name    = 'Threshold';
 thresh2.help    = {''};
-thresh2.strtype = 'e';
+thresh2.strtype = 'r';
 thresh2.num     = [1 1];
 thresh2.val     = {0.001};
 
@@ -60,7 +60,7 @@ kthresh         = cfg_entry;
 kthresh.tag     = 'kthresh';
 kthresh.name    = 'Extent (voxels)';
 kthresh.help    = {'Enter the extent threshold in voxels'};
-kthresh.strtype = 'e';
+kthresh.strtype = 'n';
 kthresh.val     = {0};
 kthresh.num     = [1 1];
 
@@ -297,7 +297,7 @@ c         = cfg_entry;
 c.tag     = 'c';
 c.name    = 'Vector';
 c.help    = {'Vector of nuisance values'};
-c.strtype = 'e';
+c.strtype = 'r';
 c.num     = [Inf 1];
 
 nuisance       = cfg_branch;
@@ -309,7 +309,7 @@ nuisance.help  = {'Add a nuisance parameter to be removed from data'};
 slice = cfg_entry;
 slice.tag = 'slice';
 slice.name = 'Show slice (in mm)?';
-slice.strtype = 'e';
+slice.strtype = 'r';
 slice.num = [1 1];
 slice.val  = {0};
 slice.help = {[...
@@ -318,7 +318,7 @@ slice.help = {[...
 gap = cfg_entry;
 gap.tag = 'gap';
 gap.name = 'Gap to skip slices';
-gap.strtype = 'e';
+gap.strtype = 'n';
 gap.num = [1 1];
 gap.val  = {5};
 gap.help = {[...
